# CyberSentinal-_Toolkit_V2

./: CMakeLists.txt  README.md  dark.qss  dictionary.txt  main.cpp  mainwindow.cpp  mainwindow.h  signatures.txt
core/: CMakeLists.txt  bruteforce.cpp  bruteforce.h  passwordutils.cpp  passwordutils.h  xorcipher.cpp  xorcipher.cpp.autosave  xorcipher.h
ui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  bruteforcewidget.cpp  bruteforcewidget.h  cipherwidget - Copy.h  cipherwidget.cpp  dictattackwidget.cpp  dictattackwidget.h  fileeraserwidget.cpp  fileeraserwidget.h  logindialog.cpp  logindialog.h  loginwidget.cpp  loginwidget.h  passgenwidget.cpp  passgenwidget.h  strengthwidget.cpp  strengthwidget.h  toolbase.cpp  toolbase.h  viruscreatorwidget.cpp  viruscreatorwidget.h  virusscannerwidget.cpp  virusscannerwidget.h
